compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__rest_variable_rewriting.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" <> x -> x\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``

let go (x: string) = begin
    match x with
    | Gleam_codegen_string_parts "Hello, " (_, x) ->
        x
    | _ ->
        "Unknown"
end
