compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__string_literal.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn foo() {\n  \"Hello, World!\"\n}\n"
---
module rec my.``mod``

let foo () = begin
    "Hello, World!"
end
