compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__string_of_number_concat.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 374
expression: "\npub fn go(x) {\n  x <> \"1\"\n}\n"
---
module rec my.``mod``
let go (x: string): string = begin
    x + "1"
end
