compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__string_prefix.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 150
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" <> name -> name\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``
let go(x: string): string = begin
    match x with
    | ``gleam Prefix`` "Hello, " name ->
        name
    | _ ->
        "Unknown"
end
