compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__string_prefix_shadowing.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" as x <> name -> x\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``

let go (x: string) = begin
    match x with
    | Gleam_codegen_string_parts "Hello, " (x, name) ->
        x
    | _ ->
        "Unknown"
end
