compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__string_prefix_with_guard.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 164
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" <> name if name == \"Dude\" -> name\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``
let go(x: string): string = begin
    match x with
    | Gleam__codegen__prefix "Hello, " name when name = "Dude" ->
        name
    | _ ->
        "Unknown"
end
