compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__unicode1.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 16
expression: "\npub fn emoji() -> String {\n  \"\\u{1f600}\"\n}\n"
---
module rec my.``mod``
let emoji (): string = begin
    "\u1f600"
end
