compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__unicode2.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn y_with_dieresis() -> String {\n  \"\\u{0308}y\"\n}\n"
---
module rec my.``mod``

let y_with_dieresis (): string = begin
    "\u0308y"
end
