compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__unicode_concat2.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 49
expression: "\npub fn main(x) -> String {\n  x <> \"\\\\u{0308}\"\n}\n"
---
module rec my.``mod``
let main (x: string): string = begin
    x + "\\u{0308}"
end
