compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__unicode_concat3.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn foo(x) -> String {\n  x <> \"\\\\\\u{0308}\"\n}\n"
---
module rec my.``mod``

let foo (x: string) = begin
    x + "\\\u0308"
end
