compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__unicode_escape_sequence_6_digits.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 106
expression: "\npub fn unicode_escape_sequence_6_digits() -> String {\n  \"\\u{10abcd}\"\n}\n"
---
module rec my.``mod``
let unicode_escape_sequence_6_digits (): string = begin
    "\u10abcd"
end
